fix overflow screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 .AppHeader{
@@ -13,14 +13,14 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 .AppFooter{
-height: 50px;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-border-top: 1px solid rgba(0, 0, 0, 0.15);
-
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 .SideMenuAndPageContent{
+    overflow-y: scroll;
     display: flex;
     flex: 1;
     justify-content: flex-start;
@@ -28,16 +28,19 @@ border-top: 1px solid rgba(0, 0, 0, 0.15);
     background-color: rgba(0, 0, 0, 0.05) ;
 }
 .SideMenu{
+    width: 200px;
     height: 100%;
+    position: fixed;
 }
 .SideMenuVertical{
     height: 100%;
 }
 .PageContent{
-    padding:0 12px;
-    width: 100%;
+    margin-left: 212px;
+    width: calc(100% - 212px);
+    /* padding-left: 12px; */
 }
-.custom-table .ant-pagination{
+ .custom-table .ant-pagination{
     margin-top: 30px !important;
 }
 .custom-table .ant-table-thead .ant-table-cell  {
@@ -48,5 +51,5 @@ border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 .custom-table .ant-pagination-item a {
 border: 1px solid lightgray;
-}
+} 
 
